Small tweak on top margin for spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,7 @@ p {
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
+  margin-top: 70px;
 }
 .intro svg#leaf {
   display: block;
